# scancode.io

./: .VERSION  .bumpversion.cfg  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .release-please-manifest.json  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  FEDERATEDCODE_CURATION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  NOTICE  ORIGIN_CURATION_DOCUMENTATION_SUMMARY.md  ORIGIN_PROPAGATION_IMPLEMENTATION.md  ORIGIN_PROPAGATION_QUICK_REFERENCE.md  README.rst  RELEASE.md  configure  configure.bat  docker-compose-offline.yml  docker-compose.dev.yml  docker-compose.latest.yml  docker-compose.purldb-scan-queue-worker.yml  docker-compose.purldb-scan-worker.yml  docker-compose.release.yml  docker-compose.yml  docker.dev.env  docker.env  how e323d10 --stat  manage.py  migrate-pg13-to-17.sh  pipeline-pyproject.toml  pyproject-pipeline.toml  pyproject.toml  (+4 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md
.github/workflows/: check-sca-integrations.yml  ci-docker.yml  ci.yml  commitlint.yml  generate-sboms.yml  lint.yml  pr-quality.yml  publish-docker-image.yml  publish-docker.yml  publish-pypi-release-aboutcode-pipeline.yml  publish-pypi-release.yml  pypi-release-abc-pipeline.yml  pypi-release-aboutcode-pipeline.yml  pypi-release.yml  release-please.yml  release.yml  run-unit-tests-docker.yml  run-unit-tests-macos.yml  run-unit-tests.yml  sca-integration-anchore.yml  sca-integration-cdxgen.yml  sca-integration-cyclonedx-gomod.yml  sca-integration-depscan.yml  sca-integration-ort-package-file.yml  sca-integration-ort.yml  sca-integration-osv-scanner.yml  sca-integration-osv.yml  sca-integration-sbom-tool.yml  sca-integration-trivy.yml  sca-integration-vuls.yml  scan.yaml  semantic-release.yml
.venv312/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py  readelf.py  vba_extract.py
Conclusions and review app/: .env.example  .gitignore  README.md  package-lock.json  package.json
Conclusions and review app/public/: index.html  manifest.json
Conclusions and review app/src/: App.js  index.js  routes.js
aboutcode/pipeline/: CHANGELOG.md  README.md  RELEASE.md  __init__.py
docs/: ORIGIN_CURATION_README.md  ORIGIN_DETERMINATION_FEATURE.md  ORIGIN_PROPAGATION_GUIDE.md  application-settings.rst  automation.rst  built-in-pipelines.rst  changelog.rst  command-line-interface.rst  conf.py  contributing.rst  custom-pipelines.rst  d2d-options.rst  data-models.rst  distros-os-images.rst  docker-image.rst  faq.rst  federatedcode-curation-integration.rst  improve-docs.rst  index.html  index.rst  inputs.rst  installation.rst  introduction.rst  offline-installation.rst  origin-curation-guide.rst  origin-curation-quick-reference.rst  origin-curation-workflows.rst  output-files.rst  policies.rst  project-configuration.rst  quickstart.rst  recognized-distros-os-images.rst  rest-api.rst  run-docker.rst  scancode-config.yml  scancodeio-output.rst  scancodeio-settings.rst  scancodeio-ui.rst  scanner.rst  scanpipe-api.rst  (+29 more)
docs/_static/: theme_overrides.css
docs/api/: origin-curation-api.rst
docs/developer/: origin-curation-architecture.rst
etc/: install.sh
etc/postgresql/: postgresql.conf
etc/requirements/: base.txt  dev.txt  lock.txt
etc/scripts/: run-scan.sh  run_d2d_scio.py
pipeline/: __init__.py
plugins/: README.rst
plugins/plugin-add_files_to_package/: README.rst  setup.cfg  setup.py
plugins/plugin-add_files_to_package/src/: .gitignore  scancodeio_add_files_to_packages.py
plugins/plugin-add_files_to_package/tests/: test_scancodeio_add_files_to_package.py
plugins/plugin-collect_debian_primary_license/: .gitignore  MANIFEST.in  README.rst  setup.cfg
plugins/plugin-collect_debian_primary_license/src/: .gitignore  scancodeio_collect_debian_primary_license.py
plugins/plugin-collect_debian_primary_license/tests/: test_scancodeio_collect_debian_primary_license.py
plugins/plugin-collect_debian_primary_license/tests/data/: README.rst
plugins/plugin-template/: NOTICE  README.rst  setup.cfg
plugins/plugin-template/src/: scancodeio_plugin_template.py
scancodeio/: __init__.py  auth.py  celery.py  context_processors.py  licenses.py  middleware.py  scan.NOTICE  settings.py  urls.py  worker.py  wsgi.py
scancodeio/settings/: __init__.py  base.py  ci.py  dev.py
scancodeio/static/: ace-1.20.0.min.js.ABOUT  ace-1.4.12.min.js.ABOUT  ace-1.42.0.min.js.ABOUT  ace-1.43.3.min.js.ABOUT  ace-1.9.5.min.js.ABOUT  add-inputs.js  billboard-2.2.0.pkgd.min.js.ABOUT  billboard-3.0.1.pkgd.min.js.ABOUT  bulma-0.9.1.min.css.ABOUT  bulma-0.9.2.min.css.ABOUT  bulma-0.9.4.min.css  bulma-0.9.4.min.css.ABOUT  bulma-1.0.0.min.css.ABOUT  bulma-1.0.1.min.css.ABOUT  bulma-1.0.2.min.css.ABOUT  bulma-1.0.4.min.css.ABOUT  bulma-toast-2.4.1.min.js.ABOUT  cc-by-4.0.LICENSE  fontawesome-5.15.1.all.min.js.ABOUT  fontawesome-5.15.4.all.min.js.ABOUT  fontawesome-6.7.2.ABOUT  highlight-10.6.0.css  html5sortable-0.9.17.min.js  html5sortable-0.9.17.min.js.ABOUT  htmx-1.7.0.min.js.ABOUT  htmx-1.9.5.min.js.ABOUT  htmx-2.0.4.min.js.ABOUT  main.css  main.js  ofl-1.1.LICENSE  origin-determination.js
scanner/: __init__.py  apps.py  models.py  tasks.py
scanner/api/: filters.py  serializers.py  views.py
scanner/migrations/: 0001_initial.py
scanner/tests/: test_api.py  test_models.py  test_tasks.py
scanpipe/: __init__.py  admin.py  apps.py  archiving.py  curation_schema.py  curation_utils.py  filters.py  forms.py  license_policies.py  logging.py  models.py  models_curation.py  origin_utils.py  outputs.py  packagedb_models.py  packagedcode_models.py  policies.py  settings.py  tasks.py  urls.py  views.py
scanpipe/api/: __init__.py  serializers.py  urls.py  views.py
scanpipe/cyclonedx/: __init__.py
scanpipe/migrations/: 0001_add_origin_determination.py  0001_initial.py  0002_add_origin_propagation.py  0002_run_id_and_log.py  (+161 more)
scantext/: admin.py  apps.py  forms.py  match_text.py  models.py  tests.py  urls.py  views.py
(+759 files in other folders)
