[metadata]
name = scancodeio
version = 34.7.0
license = Apache-2.0
description = Automate software composition analysis pipelines
long_description = file:README.rst
author = nexB Inc.
author_email = info@aboutcode.org
url = https://github.com/nexB/scancode.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
keywords =
    open source
    scan
    license
    package
    dependency
    copyright
    filetype
    author
    extract
    licensing
    scancode
    scanpipe
    docker
    rootfs
    vm
    virtual machine
    pipeline
    code analysis
    container
license_files =
    LICENSE
    NOTICE
    scan.NOTICE

[options]
python_requires = >=3.10
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    importlib-metadata==7.2.1
    setuptools==70.0.0
    # Django related
    Django==5.0.6
    django-environ==0.11.2
    django-crispy-forms==2.2
    crispy-bootstrap3==2024.1
    django-filter==24.2
    djangorestframework==3.15.2
    django-taggit==5.0.1
    # Database
    psycopg[binary]==3.1.19
    # wait_for_database Django management command
    django-probes==1.7.0
    # Task queue
    rq==1.16.2
    django-rq==2.10.2
    redis==5.0.6
    # WSGI server
    gunicorn==22.0.0
    # Docker
    container-inspector==33.0.0
    # ScanCode-toolkit
    scancode-toolkit[packages]==32.2.1
    extractcode[full]==31.0.0
    commoncode==31.2.1
    # FetchCode
    fetchcode-container==1.2.3.210512; sys_platform == "linux"
    # Inspectors
    elf-inspector==0.0.1
    go-inspector==0.2.2
    python-inspector==0.12.0
    source-inspector==0.5.1; sys_platform != "darwin" and platform_machine != "arm64"
    aboutcode-toolkit==10.1.0
    # Utilities
    XlsxWriter==3.2.0
    openpyxl==3.1.4
    requests==2.32.3
    gitpython==3.1.43
    # Profiling
    pyinstrument==4.6.2
    # CycloneDX
    cyclonedx-python-lib==7.5.0
    jsonschema==4.22.0
    # Font Awesome
    fontawesomefree==6.5.1
    # MatchCode-toolkit
    matchcode-toolkit==5.1.0
    # Univers
    univers==30.11.0
    # Markdown
    markdown-it-py==3.0.0
    bleach==6.1.0
    # Antivirus
    clamd==1.0.2

[options.extras_require]
dev =
    # Validation
    flake8==7.1.0
    black==24.4.2
    isort==5.13.2
    doc8==1.1.1
    pydocstyle==6.3.0
    # Security analyzer
    bandit==1.7.9
    # Debug
    django-debug-toolbar==4.4.2
    # Documentation
    Sphinx==7.3.7
    sphinx-rtd-theme==2.0.0
    sphinx-rtd-dark-mode==1.3.0
    sphinxcontrib-django==2.5
    # Release
    bumpver==2023.1129
    twine==5.1.0

[options.entry_points]
console_scripts =
    scanpipe = scancodeio:command_line
    run = scancodeio:combined_run

scancodeio_pipelines =
    analyze_docker_image = scanpipe.pipelines.docker:Docker
    analyze_root_filesystem_or_vm_image = scanpipe.pipelines.root_filesystem:RootFS
    analyze_windows_docker_image = scanpipe.pipelines.docker_windows:DockerWindows
    collect_strings_gettext = scanpipe.pipelines.collect_strings_gettext:CollectStringsGettext
    collect_symbols_ctags = scanpipe.pipelines.collect_symbols_ctags:CollectSymbolsCtags
    collect_symbols_pygments = scanpipe.pipelines.collect_symbols_pygments:CollectSymbolsPygments
    collect_symbols_tree_sitter = scanpipe.pipelines.collect_symbols_tree_sitter:CollectSymbolsTreeSitter
    find_vulnerabilities = scanpipe.pipelines.find_vulnerabilities:FindVulnerabilities
    inspect_elf_binaries = scanpipe.pipelines.inspect_elf_binaries:InspectELFBinaries
    inspect_packages = scanpipe.pipelines.inspect_packages:InspectPackages
    load_inventory = scanpipe.pipelines.load_inventory:LoadInventory
    load_sbom = scanpipe.pipelines.load_sbom:LoadSBOM
    map_deploy_to_develop = scanpipe.pipelines.deploy_to_develop:DeployToDevelop
    match_to_matchcode = scanpipe.pipelines.match_to_matchcode:MatchToMatchCode
    populate_purldb = scanpipe.pipelines.populate_purldb:PopulatePurlDB
    resolve_dependencies = scanpipe.pipelines.resolve_dependencies:ResolveDependencies
    scan_codebase = scanpipe.pipelines.scan_codebase:ScanCodebase
    scan_for_virus = scanpipe.pipelines.scan_for_virus:ScanForVirus
    scan_single_package = scanpipe.pipelines.scan_single_package:ScanSinglePackage

[isort]
force_single_line = True
line_length = 88
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = lib,migrations,bin,data,Script,Lib,lib64,local,var,tmp,thirdparty,build,dist

[flake8]
max_line_length = 88
max_complexity = 10
exclude = lib,thirdparty,docs,bin,migrations,settings.py,data,var,build,dist,.cache
ignore = E203,W503

[pydocstyle]
ignore = D1,D203,D205,D212,D400,D415

[bumpver]
version_pattern = "MAJOR.MINOR.PATCH"
current_version = "34.7.0"

[bumpver:file_patterns]
setup.cfg =
    version = {version}
    current_version = "{version}"
scancodeio/__init__.py = {version}
