[metadata]
name = scancodeio
version = 34.9.5
license = Apache-2.0
description = Automate software composition analysis pipelines
long_description = file:README.rst
author = nexB Inc.
author_email = info@aboutcode.org
url = https://github.com/aboutcode-org/scancode.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
keywords =
    open source
    scan
    license
    package
    dependency
    copyright
    filetype
    author
    extract
    licensing
    scancode
    scanpipe
    docker
    rootfs
    vm
    virtual machine
    pipeline
    code analysis
    container
license_files =
    LICENSE
    NOTICE
    scan.NOTICE

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    importlib-metadata==8.6.1
    setuptools==75.6.0
    # Django related
    Django==5.1.5
    django-environ==0.12.0
    django-crispy-forms==2.3
    crispy-bootstrap3==2024.1
    django-filter==24.3
    djangorestframework==3.15.2
    django-taggit==6.1.0
    # Database
    psycopg[binary]==3.2.4
    # wait_for_database Django management command
    django-probes==1.7.0
    # Task queue
    rq==2.1.0
    django-rq==3.0.0
    redis==5.2.1
    # WSGI server
    gunicorn==23.0.0
    # Docker
    container-inspector==33.0.0
    # ScanCode-toolkit
    scancode-toolkit[packages]==32.3.2
    extractcode[full]==31.0.0
    commoncode==32.2.0
    Beautifulsoup4[chardet]==4.13.3
    packageurl-python==0.16.0
    # FetchCode
    fetchcode-container==1.2.3.210512; sys_platform == "linux"
    # Inspectors
    elf-inspector==0.0.1
    go-inspector==0.5.0
    rust-inspector==0.1.0
    python-inspector==0.12.1
    source-inspector==0.5.1; sys_platform != "darwin" and platform_machine != "arm64"
    aboutcode-toolkit==11.0.0
    # Utilities
    XlsxWriter==3.2.0
    openpyxl==3.1.5
    requests==2.32.3
    GitPython==3.1.44
    # Profiling
    pyinstrument==5.0.0
    # CycloneDX
    cyclonedx-python-lib==8.5.0
    jsonschema==4.23.0
    # MatchCode-toolkit
    matchcode-toolkit==7.0.0
    # Univers
    univers==30.12.1
    # Markdown
    markdown-it-py==3.0.0
    bleach==6.2.0
    # Antivirus
    clamd==1.0.2
    # FederatedCode
    aboutcode.hashid==0.2.0
    # AboutCode pipeline
    aboutcode.pipeline==0.2.1

[options.extras_require]
dev =
    # Validation
    ruff==0.9.2
    doc8==1.1.2
    # Debug
    django-debug-toolbar==5.0.1
    # Documentation
    Sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx-rtd-dark-mode==1.3.0
    sphinxcontrib-django==2.5
    # Release
    bumpver==2024.1130

android_analysis =
    android_inspector==0.0.1

[options.entry_points]
console_scripts =
    scanpipe = scancodeio:command_line
    run = scancodeio:combined_run

scancodeio_pipelines =
    analyze_docker_image = scanpipe.pipelines.analyze_docker:Docker
    analyze_root_filesystem_or_vm_image = scanpipe.pipelines.analyze_root_filesystem:RootFS
    analyze_windows_docker_image = scanpipe.pipelines.analyze_docker_windows:DockerWindows
    collect_strings_gettext = scanpipe.pipelines.collect_strings_gettext:CollectStringsGettext
    collect_symbols_ctags = scanpipe.pipelines.collect_symbols_ctags:CollectSymbolsCtags
    collect_symbols_pygments = scanpipe.pipelines.collect_symbols_pygments:CollectSymbolsPygments
    collect_symbols_tree_sitter = scanpipe.pipelines.collect_symbols_tree_sitter:CollectSymbolsTreeSitter
    enrich_with_purldb = scanpipe.pipelines.enrich_with_purldb:EnrichWithPurlDB
    find_vulnerabilities = scanpipe.pipelines.find_vulnerabilities:FindVulnerabilities
    inspect_elf_binaries = scanpipe.pipelines.inspect_elf_binaries:InspectELFBinaries
    inspect_packages = scanpipe.pipelines.inspect_packages:InspectPackages
    load_inventory = scanpipe.pipelines.load_inventory:LoadInventory
    load_sbom = scanpipe.pipelines.load_sbom:LoadSBOM
    map_deploy_to_develop = scanpipe.pipelines.deploy_to_develop:DeployToDevelop
    match_to_matchcode = scanpipe.pipelines.match_to_matchcode:MatchToMatchCode
    populate_purldb = scanpipe.pipelines.populate_purldb:PopulatePurlDB
    publish_to_federatedcode = scanpipe.pipelines.publish_to_federatedcode:PublishToFederatedCode
    resolve_dependencies = scanpipe.pipelines.resolve_dependencies:ResolveDependencies
    scan_codebase = scanpipe.pipelines.scan_codebase:ScanCodebase
    scan_for_virus = scanpipe.pipelines.scan_for_virus:ScanForVirus
    scan_single_package = scanpipe.pipelines.scan_single_package:ScanSinglePackage

[bumpver]
version_pattern = "MAJOR.MINOR.PATCH"
current_version = "34.9.5"

[bumpver:file_patterns]
setup.cfg =
    version = {version}
    current_version = "{version}"
scancodeio/__init__.py = {version}
