[metadata]
name = scancodeio_add_files_to_packages
version = 1.0.0
license = Apache-2.0
description = A ScanCode.io pipeline plugin to relate installed files to their package. 

long_description = file:README.rst
author = nexB Inc.
author_email = info@aboutcode.org
url = https://github.com/nexB/scancode.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

keywords =
    open source
    scancode.io

license_files =
    apache-2.0.LICENSE
    NOTICE

[options]
packages = find:
package_dir = =src
py_modules =
    scancodeio_add_files_to_packages
include_package_data = True
zip_safe = False
python_requires = >=3.6.*, <4
#install_requires =


[options.packages.find]
where = src


[options.entry_points]
scancodeio_pipelines =
    add_files_to_packages = scancodeio_add_files_to_packages:AddFilesToPackages
