[metadata]
name = scancodeio_collect_debian_primary_license
version = 1.0.0
license = Apache-2.0
description = A ScanCode.io pipeline plugin to  collect Deina packages primary license sperated by a | in front of the full license. 

long_description = file:README.rst
author = nexB Inc.
author_email = info@aboutcode.org
url = https://github.com/nexB/scancode.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

keywords =
    open source
    scancode.io

license_files =
    apache-2.0.LICENSE
    NOTICE

[options]
packages = find:
package_dir = =src
py_modules =
    scancodeio_collect_debian_primary_license
include_package_data = True
zip_safe = False
python_requires = >=3.6.*, <4
#install_requires =


[options.packages.find]
where = src


[options.entry_points]
scancodeio_pipelines =
    collect_debian_primary_license = scancodeio_collect_debian_primary_license:CollectDebianPrimaryLicense
